# RAG-on-GCP

./: .gitignore  pyproject.toml
src/chatbot/: app.py  config.py
src/chatbot/lib/: chain.py  embeddings.py  filters.py  firestore.py  llms.py  prompt.py  source_retriever.py  streaming.py
terraform/: backend.tf  firestore.tf  locals.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/bootstrap/: artifact_registry.tf  backend.tf  impersonate_sa.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
